--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding: 50px 0px;
 }
-
-
 
 .canvas {
     width: 700px;
@@ -21,7 +19,36 @@ body {
 }
 
 .controls {
-    margin-top: 80px;
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.controls .controls_btns {
+    margin-bottom: 30px;
+}
+
+
+.controls_btns button {
+    all: unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 0px;
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border:2px solid rgba(0, 0, 0, 0.25);
+    color: rgba(0, 0, 0, 0.55);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
+
+}
+
+.controls_btns button:active {
+    transform:scale(0.95);
 }
 
 .controls .controls_colors {
@@ -33,7 +60,14 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 
+}
+
+
+.controls .control_range {
+    margin-bottom: 30px;
 }
